--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "ethers-multicall": "^0.2.3",
+    "prop-types": "^15.8.1",
+    "ra-data-fakerest": "^4.0.4",
+    "ra-data-json-server": "^4.0.4",
+    "ra-data-local-storage": "^4.0.4",
+    "ra-data-simple-rest": "^4.0.4",
     "react": "^18.1.0",
+    "react-admin": "^4.0.4",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
