--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@typechain/ethers-v5": "^10.0.0",
+    "typechain": "^8.0.0"
+
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "typechain --target ethers-v5 --out-dir src/contracts \"src/abis/**/*.json\""
   },
   "eslintConfig": {
     "extends": [
