--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@metamask/detect-provider": "^1.2.0",
     "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -13,6 +14,9 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@web3-react/core": "^8.0.12-beta.0",
+    "@web3-react/metamask": "^8.0.8-beta.0",
+    "@web3-react/network": "^8.0.8-beta.0",
     "ethers-multicall": "^0.2.3",
     "prop-types": "^15.8.1",
     "ra-data-fakerest": "^4.0.4",
@@ -25,10 +29,12 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
+    "use-color-scheme": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.0.0",
+    "hardhat": "^2.9.7",
     "typechain": "^8.0.0"
   },
   "scripts": {
