--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@typechain/ethers-v5": "^10.0.0",
     "hardhat": "^2.9.7",
+    "@types/lodash": "^4.14.182",
     "typechain": "^8.0.0"
   },
   "scripts": {
