--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@metamask/detect-provider": "^1.2.0",
     "@mui/material": "^5.8.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
