--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@web3-react/metamask": "^8.0.8-beta.0",
     "@web3-react/network": "^8.0.8-beta.0",
     "ethers-multicall": "^0.2.3",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "ra-data-fakerest": "^4.0.4",
     "ra-data-json-server": "^4.0.4",
@@ -35,8 +36,8 @@
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.0.0",
-    "hardhat": "^2.9.7",
     "@types/lodash": "^4.14.182",
+    "hardhat": "^2.9.7",
     "typechain": "^8.0.0"
   },
   "scripts": {
