setup overrides for webpack config to support gnosis

--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@qidao/sdk": "5.1.20",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@ethersproject/keccak256": "5.7.0",
     "@ethersproject/providers": "5.7.0",
     "@ethersproject/strings": "5.7.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@gnosis.pm/safe-core-sdk": "^3.1.1",
+    "@gnosis.pm/safe-core-sdk-types": "^1.6.1",
+    "@gnosis.pm/safe-ethers-lib": "^1.6.1",
+    "@gnosis.pm/safe-service-client": "^1.2.0",
     "@metamask/detect-provider": "^1.2.0",
     "@mui/material": "^5.8.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@qidao/sdk": "5.1.20",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +27,7 @@
     "@web3-react/core": "^8.0.12-beta.0",
     "@web3-react/metamask": "^8.0.8-beta.0",
     "@web3-react/network": "^8.0.8-beta.0",
-    "ethers": "5.7.0",
+    "ethers": "5.7.1",
     "ethers-multicall": "^0.2.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
@@ -43,15 +47,26 @@
   "devDependencies": {
     "@typechain/ethers-v5": "^10.1.0",
     "@types/lodash": "^4.14.182",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "hardhat": "^2.9.7",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "prettier": "^2.7.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typechain": "^8.1.0",
-    "prettier": "^2.7.1"
+    "url": "^0.11.0",
+    "webpack": "^5.74.0"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--max_old_space_size=8192 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "postinstall": "typechain --target ethers-v5 --out-dir src/contracts \"src/abis/**/*.json\""
   },
   "eslintConfig": {
