--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@gnosis.pm/safe-ethers-lib": "^1.6.1",
     "@gnosis.pm/safe-service-client": "^1.3.1",
     "@metamask/detect-provider": "^1.2.0",
+    "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
-    "@qidao/sdk": "5.1.25",
+    "@qidao/sdk": "5.1.26",
     "@snapshot-labs/snapshot.js": "^0.4.40",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
