add liquidationHistory panel draft, add reactQuery support

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/keccak256": "5.7.0",
@@ -19,6 +20,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@qidao/sdk": "5.1.44",
     "@snapshot-labs/snapshot.js": "^0.4.40",
+    "@tanstack/query-sync-storage-persister": "^4.15.1",
+    "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-persist-client": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,8 +35,9 @@
     "@web3-react/metamask": "^8.0.8-beta.0",
     "@web3-react/network": "^8.0.8-beta.0",
     "date-fns": "^2.29.3",
-    "ethers": "5.7.1",
     "ethcall": "4.8.10",
+    "ethers": "5.7.1",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "p-queue": "^7.3.0",
     "prop-types": "^15.8.1",
@@ -57,9 +62,9 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
-    "path-browserify": "^1.0.1",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
