--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "date-fns": "^2.29.3",
     "ethcall": "4.8.10",
     "ethers": "5.7.1",
+    "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "p-queue": "^7.3.0",
     "prop-types": "^15.8.1",
-    "ra-data-fakerest": "^4.0.4",
-    "ra-data-json-server": "^4.0.4",
-    "ra-data-local-storage": "^4.0.4",
-    "ra-data-simple-rest": "^4.0.4",
+    "ra-data-fakerest": "^4.5.2",
+    "ra-data-json-server": "^4.5.2",
+    "ra-data-local-storage": "^4.5.2",
+    "ra-data-simple-rest": "^4.5.2",
     "react": "^18.1.0",
-    "react-admin": "^4.0.4",
+    "react-admin": "^4.5.2",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24",
