--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "ra-data-local-storage": "^4.5.2",
     "ra-data-simple-rest": "^4.5.2",
     "react": "^18.1.0",
-    "react-admin": "^4.5.2",
+    "react-admin": "^4.7.1",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.42.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
