--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
         "@web3-react/core": "^8.0.12-beta.0",
         "@web3-react/metamask": "^8.0.8-beta.0",
         "@web3-react/network": "^8.0.8-beta.0",
+        "buffer": "^6.0.3",
         "date-fns": "^2.29.3",
         "ethcall": "4.8.10",
         "ethers": "5.7.1",
         "fuse.js": "^6.6.2",
         "graphql": "^16.6.0",
         "lodash": "^4.17.21",
+        "node-stdlib-browser": "^1.2.0",
         "p-queue": "^7.3.0",
         "prop-types": "^15.8.1",
         "ra-data-fakerest": "^4.5.2",
@@ -51,15 +53,18 @@
         "react-admin": "^4.7.1",
         "react-dom": "^18.1.0",
         "react-hook-form": "^7.42.1",
-        "react-scripts": "5.0.1",
         "tailwindcss": "^3.0.24",
-        "typescript": "^4.6.4",
+        "typescript": "^4.9.5",
         "use-color-scheme": "^1.1.3",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+        "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+        "@rollup/plugin-inject": "^5.0.3",
         "@typechain/ethers-v5": "^10.1.0",
         "@types/lodash": "^4.14.182",
+        "@vitejs/plugin-react": "^2.0.1",
         "assert": "^2.0.0",
         "buffer": "^6.0.3",
         "crypto-browserify": "^3.12.0",
@@ -68,18 +73,18 @@
         "path-browserify": "^1.0.1",
         "prettier": "^2.7.1",
         "process": "^0.11.10",
-        "react-app-rewired": "^2.2.1",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "typechain": "^8.1.0",
         "url": "^0.11.0",
+        "vite": "^3.0.7",
+        "vite-plugin-svgr": "^2.4.0",
+        "vite-tsconfig-paths": "^4.0.5",
         "webpack": "^5.74.0"
     },
     "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject",
+        "start": "vite",
+        "build": "vite build",
         "postinstall": "typechain --target ethers-v5 --out-dir src/contracts \"src/abis/**/*.json\""
     },
     "eslintConfig": {
