--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
         "react-admin": "^4.7.1",
         "react-dom": "^18.1.0",
         "react-hook-form": "^7.42.1",
+        "react-json-tree": "^0.18.0",
+        "react-json-view": "^1.21.3",
         "tailwindcss": "^3.0.24",
         "typescript": "^4.9.5",
         "use-color-scheme": "^1.1.3",
