--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "react-hook-form": "^7.42.1",
         "react-json-tree": "^0.18.0",
         "react-json-view": "^1.21.3",
-        "tailwindcss": "^3.0.24",
+        "tailwindcss": "^3.3.3",
         "typescript": "^4.9.5",
         "use-color-scheme": "^1.1.3",
         "web-vitals": "^2.1.4"
@@ -68,11 +68,13 @@
         "@types/lodash": "^4.14.182",
         "@vitejs/plugin-react": "^2.0.1",
         "assert": "^2.0.0",
+        "autoprefixer": "^10.4.14",
         "buffer": "^6.0.3",
         "crypto-browserify": "^3.12.0",
         "https-browserify": "^1.0.0",
         "os-browserify": "^0.3.0",
         "path-browserify": "^1.0.1",
+        "postcss": "^8.4.27",
         "prettier": "^2.7.1",
         "process": "^0.11.10",
         "stream-browserify": "^3.0.0",
