--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@gnosis.pm/safe-ethers-lib": "^1.6.1",
         "@gnosis.pm/safe-service-client": "^1.3.1",
         "@metamask/detect-provider": "^1.2.0",
+        "@mui/icons-material": "^5.14.1",
         "@mui/lab": "^5.0.0-alpha.104",
         "@mui/material": "^5.8.0",
         "@mui/x-date-pickers": "^5.0.4",
